* Moved IsBusy and it's logic to ControlExtensions so that it can be used on each control and it's children. AzureCloudserviceDeployer uses it on both user controls and the main form now.  * Added AppControl, a base for user controls  * Added SuspendDraw and ResumeDraw extension methods for performance purposes

--- a/MsCommon.ClickOnce.csproj
+++ b/MsCommon.ClickOnce.csproj
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -50,10 +53,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConfiguration.cs" />
+    <Compile Include="AppControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AppControl.Designer.cs">
+      <DependentUpon>AppControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="AppProgram.cs" />
     <Compile Include="AppForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Extensions\ControlExtensions.cs" />
     <Compile Include="Extensions\EnumerationExtensions.cs" />
     <Compile Include="FlashWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
