--- a/MsCommon.ClickOnce.csproj
+++ b/MsCommon.ClickOnce.csproj
@@ -35,9 +35,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -79,6 +78,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SelectableMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectableMessageBox.Designer.cs">
+      <DependentUpon>SelectableMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportBugForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,16 +104,19 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="SelectableMessageBox.resx">
+      <DependentUpon>SelectableMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportBugForm.resx">
       <DependentUpon>ReportBugForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Resources\smiley-icon.png" />
     <Content Include="Resources\smiley-sad-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
